rplace/templates/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rplace-admin
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5173
